force-app/main/default/objects/Case/fields/ATM_Fee_in_Other_Currencies_Stamp__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_Other_Currencies_Stamp__c</fullName>
    <label>ATM Fee in Other Currencies Stamp</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>