force-app/main/default/objects/Case/fields/Card_Replacement_Cost_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost_Stamp__c</fullName>
    <label>Card Replacement Cost Stamp</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>