force-app/main/default/objects/Case/fields/Cost_per_Calendar_Month_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month_Stamp__c</fullName>
    <label>Cost per Calendar Month Stamp</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>