force-app/main/default/objects/Case/fields/Link_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Case__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,   CaseNumber , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Case</label>
    <type>Text</type>
</CustomField>